Fix link to the game

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</ul>	
 
 			<h3 id="telecharger">T&eacute;l&eacute;charger</h3>
-			<p><a href="#">Ici lien à télécharger avec votre script</a></p>
+			<p><a href="https://yorunohikage.itch.io/8-bit-robot-music-party">Télécharger</a></p>
 
 			<h3 id="equipe">L'&eacute;quipe</h3>
 			<p>&Eacute;quipe SwitchCode compos&eacute;e de Alexis LAUNAY (1S) - 16 ans &amp; Kilian OLLIVIER (1S) - 16 ans</p>
